// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with-pragma.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
requirePragma: true
                                                                                | printWidth
=====================================input======================================
# @prettier

    123

=====================================output=====================================
# @prettier

123

================================================================================
`;

exports[`without-pragma.yml format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
requirePragma: true
                                                                                | printWidth
=====================================input======================================


    123

=====================================output=====================================


    123

================================================================================
`;
